k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chatapp
spec:
  selector:
    matchLabels:
      app: mongodb-deployment
  template:
    metadata:
      labels:
        app: mongodb-deployment
    spec:
      containers:
        - name: mongodb-deployment
          image: mongo:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodata
              mountPath: /data/db
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongdb-pvc
