k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chatapp
  labels:
    app.kubernetes.io/name: chatapp-ingress
    app.kubernetes.io/part-of: chatapp
spec:
  rules:
    - host: chatapp.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
